@@ -1,7 +1,10 @@
 package com.mercadolibre.planning.model.api.util;
 
-import com.mercadolibre.planning.model.api.domain.entity.sla.GetSlaByWarehouseOutput;
+import static com.mercadolibre.planning.model.api.domain.usecase.sla.ExecutionMetrics.USES_OF_PROCESSING_TIME_DEFAULT;
+import static com.mercadolibre.planning.model.api.domain.usecase.sla.ExecutionMetrics.withCPTHour;
+import static com.mercadolibre.planning.model.api.domain.usecase.sla.ExecutionMetrics.withLogisticCenterID;
 
+import com.mercadolibre.planning.model.api.domain.entity.sla.GetSlaByWarehouseOutput;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -24,14 +27,22 @@ public final class GetSlaByWarehouseUtils {
                 .collect(Collectors.toCollection(HashSet::new));
 
         final List<GetSlaByWarehouseOutput> slaFilter = new ArrayList<>(slas);
-
-        slaFilter.addAll(backlog.stream()
+        final var slasToAdd = backlog.stream()
                 .filter(b -> !slaDates.contains(b.getDate()))
-                .collect(Collectors.toList()));
+            .toList();
+
+        for (GetSlaByWarehouseOutput sla : slasToAdd) {
+            USES_OF_PROCESSING_TIME_DEFAULT.count(
+                withLogisticCenterID(sla.getLogisticCenterId()),
+                withCPTHour(sla.getDate())
+            );
+        }
+
+        slaFilter.addAll(slasToAdd);
 
         return slaFilter.stream()
                 .sorted(Comparator.comparing(GetSlaByWarehouseOutput::getDate))
-                .collect(Collectors.toList());
+            .toList();
 
     }
 }
